--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,4 +21,7 @@ dev = [
 
 [tool.setuptools]
 package-dir = {"" = "src"}
-py-modules = ["shopee_affiliate_client"]
+
+[tool.setuptools.packages.find]
+where = ["src"]
+include = ["shopee_affiliate*"]
